// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeRecordCategory applies correct colors based on active state 1`] = `
<View
  accessibilityLabel="Logins category button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#E6AA68",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "flexGrow": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 11.450643776824034,
      "paddingLeft": 11.450643776824034,
      "paddingRight": 11.450643776824034,
      "paddingTop": 11.450643776824034,
    }
  }
  testID="home-category-logins-button"
>
  <Text
    accessibilityLabel="Logins category count"
    active={false}
    style={
      {
        "color": "#F6F6F6",
        "fontFamily": "Inter",
        "fontSize": 20.03862660944206,
        "paddingLeft": 11.450643776824034,
      }
    }
    testID="home-category-logins-button-text"
  >
    Logins
     
  </Text>
</View>
`;

exports[`BadgeRecordCategory applies correct colors based on active state 2`] = `
<View
  accessibilityLabel="Logins category button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#E6AA68",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#E6AA68",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "flexGrow": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 11.450643776824034,
      "paddingLeft": 11.450643776824034,
      "paddingRight": 11.450643776824034,
      "paddingTop": 11.450643776824034,
    }
  }
  testID="home-category-logins-button"
>
  <Text
    accessibilityLabel="Logins category count"
    active={true}
    style={
      {
        "color": "#050B06",
        "fontFamily": "Inter",
        "fontSize": 20.03862660944206,
        "paddingLeft": 11.450643776824034,
      }
    }
    testID="home-category-logins-button-text"
  >
    Logins
     
  </Text>
</View>
`;

exports[`BadgeRecordCategory renders correctly with active state 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "black",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "flexGrow": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 11.450643776824034,
      "paddingLeft": 11.450643776824034,
      "paddingRight": 11.450643776824034,
      "paddingTop": 11.450643776824034,
    }
  }
>
  <Text
    accessibilityLabel=""
    active={true}
    style={
      {
        "color": "#050B06",
        "fontFamily": "Inter",
        "fontSize": 20.03862660944206,
        "paddingLeft": 11.450643776824034,
      }
    }
  >
    Cards
     
    3
  </Text>
</View>
`;

exports[`BadgeRecordCategory renders correctly with inactive state 1`] = `
<View
  accessibilityLabel="Logins category button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#E6AA68",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "flexGrow": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 11.450643776824034,
      "paddingLeft": 11.450643776824034,
      "paddingRight": 11.450643776824034,
      "paddingTop": 11.450643776824034,
    }
  }
  testID="home-category-logins-button"
>
  <Text
    accessibilityLabel="Logins category count"
    active={false}
    style={
      {
        "color": "#F6F6F6",
        "fontFamily": "Inter",
        "fontSize": 20.03862660944206,
        "paddingLeft": 11.450643776824034,
      }
    }
    testID="home-category-logins-button-text"
  >
    Logins
     
    5
  </Text>
</View>
`;
